--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,7 @@
     "brace-style": [2,"1tbs",{}],
     "camelcase": [2,{"properties":"never"}],
     "comma-spacing": [2,{"after": true}],
-    "comma-style": ["error", "last"],
+    "comma-style": [2, "last"],
     "computed-property-spacing": [2,"never"],
     "consistent-this": [2,"self"],
     "eol-last": 2,
@@ -27,7 +27,7 @@
     "no-underscore-dangle": 1,
     "no-unneeded-ternary": 1,
     "object-curly-spacing": [2,"never",{}],
-    "one-var": ["error","never"],
+    "one-var": [2,"never"],
     "operator-linebreak": [1,"after"],
     "quotes": [2,"single"],
     "semi-spacing": [2,{"after":true}],
@@ -104,7 +104,7 @@
     "no-labels": 2,
     "no-lone-blocks": 2,
     "no-loop-func": 1,
-    "no-multi-spaces": ["error",{"exceptions": {"Property":true,"AssignmentExpression":true,"BinaryExpression":false,"VariableDeclarator":true,"ImportDeclaration":true}}],
+    "no-multi-spaces": [2,{"exceptions": {"Property":true,"AssignmentExpression":true,"BinaryExpression":false,"VariableDeclarator":true,"ImportDeclaration":true}}],
     "no-native-reassign": 2,
     "no-new-func": 2,
     "no-new-wrappers": 2,
